--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.18.2",
     "inquirer": "^9.2.1",
     "mysql2": "^3.2.4"
   }
